--- a/src/main/webapp/stats.html
+++ b/src/main/webapp/stats.html
@@ -36,12 +36,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand material_navbar_brand" href="index.html">UOK</a>
+            <a class="navbar-brand material_navbar_brand" href="index_old.html">UOK</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-3">
             <ul class="nav navbar-nav material_navbar_nav">
-                <li><a href="index.html" class="material_navbar_nav_item">Javascript </a></li>
+                <li><a href="index_old.html" class="material_navbar_nav_item">Javascript </a></li>
                 <li><a href="#" class="material_navbar_nav_item">MVC Template (jsp)</a></li>
                 <li class="active"><a href="stats.html" class="material_navbar_nav_item">Stats<span class="sr-only">(current)</span></a></li>
 
