--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -284,8 +284,7 @@
         });
     }
 
-    $(document).ready(function(){
-
+    function refreshData(){
         $.ajax
         ({
             type: "GET",
@@ -319,7 +318,17 @@
                     html+= "<h2>" + data[i].name + "</h2>";
                     html+= "</div>";
                     html+= "<div class=\"card-body card-padding\">";
-                    html+= JSON.stringify(data[i]);
+
+                    //html+= JSON.stringify(data[i]);
+
+                    html+= "<h3><i class=\"zmdi zmdi-my-location zmdi-hc-fw\"></i>Location : " + data[i].location + "</h3>";
+                    //<i class="zmdi zmdi-accounts-alt zmdi-hc-fw"></i>
+                    html+= "<br/>";
+                    html += "<h3><i class=\"zmdi zmdi-calendar-alt zmdi-hc-fw\"></i> Heure et jour : " + new Date(data[i].date).toLocaleTimeString("fr-FR",{
+                                weekday: "long", year: "numeric", month: "short",
+                                day: "numeric", hour: "2-digit", minute: "2-digit"
+                            }) + "</h3>";
+
 
                     html += "<table id=\"data-table-primary-"+i+"\" class=\"table table-striped table-vmiddle\">";
                     html += "<thead>";
@@ -336,7 +345,7 @@
 
                     html+= "</div></div>";
                 }//data-table-command
-                console.log(html);
+                //console.log(html);
                 $("#content-events").html(html);
                 for (var i=0; i<data.length; i++){
                     $("#data-table-primary-"+i).bootgrid({
@@ -359,23 +368,15 @@
 
                 }
 
-
-
-                /*
-                 <div class="card">
-                 <div class="card-header">
-                 <h2>Liste d'utilistateurs<small>Random text.</small></h2>
-                 </div>
-                 <div class="card-body card-padding">
-                 <h2>Hello <span class="user-name-insert"></span> ! </h2>
-                 </div>
-                 </div>
-                 */
             },
             error : function(jqXHR, textStatus, errorThrown) {
             }
         });
 
+    }
+
+    $(document).ready(function(){
+        refreshData();
     });
 
 
