--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -315,20 +315,26 @@
                 for(var i=0; i < data.length; i++){
                     html+= "<div class=\"card\">";
                     html+= "<div class=\"card-header\">";
-                    html+= "<h2>" + data[i].name + "</h2>";
+                    html+= "<h1>" + data[i].name + "</h1>";
                     html+= "</div>";
                     html+= "<div class=\"card-body card-padding\">";
 
                     //html+= JSON.stringify(data[i]);
 
-                    html+= "<h3><i class=\"zmdi zmdi-my-location zmdi-hc-fw\"></i>Location : " + data[i].location + "</h3>";
+                    html+= "<h4><i class=\"zmdi zmdi-my-location zmdi-hc-fw\"></i>Location : " + data[i].location + "</h4>";
                     //<i class="zmdi zmdi-accounts-alt zmdi-hc-fw"></i>
                     html+= "<br/>";
-                    html += "<h3><i class=\"zmdi zmdi-calendar-alt zmdi-hc-fw\"></i> Heure et jour : " + new Date(data[i].date).toLocaleTimeString("fr-FR",{
+                    html += "<h4><i class=\"zmdi zmdi-calendar-alt zmdi-hc-fw\"></i> Heure et jour : " + new Date(data[i].date).toLocaleTimeString("fr-FR",{
                                 weekday: "long", year: "numeric", month: "short",
                                 day: "numeric", hour: "2-digit", minute: "2-digit"
-                            }) + "</h3>";
+                            }) + "</h4>";
 
+                    html+= "<br/>";
+
+                    html+= "<h4><i class=\"zmdi zmdi-money zmdi-hc-fw\"></i>Prix : " + (data[i].prix == undefined ? 0 : data[i].prix) + " €</h4>";
+
+
+                    html+= "<br/>";
 
                     html += "<table id=\"data-table-primary-"+i+"\" class=\"table table-striped table-vmiddle\">";
                     html += "<thead>";
